--- a/moduleA/pom.xml
+++ b/moduleA/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>ch.sbb.kihub</groupId>
         <artifactId>artifactoryreleasebuildtest</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <groupId>ch.sbb.kihub.artifactoryreleasebuildtest</groupId>
     <artifactId>moduleA</artifactId>
